<resources><string name="app_name">GSL Track</string><string name="action_settings">Settings</string><string name="logo_description">Company Logo</string><string name="imei_title">IMEI:</string><string name="initial_value">0</string><string name="current_speed">SPEED (km/hr)</string><string name="current_distance">DISTANCE (km)</string><string name="coordinates">COORDINATES</string><string name="lattitude">LATTITUDE:</string><string name="longitude">LONGITUDE:</string><string name="accelerometer">ACCELEROMETER</string><string name="x">X:</string><string name="y">Y:</string><string name="z">Z:</string><string name="altitude">ALTITUDE:</string><string name="connection">GPS CONNECTION:</string><string name="status">OFF</string></resources>