<LinearLayout android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="vertical" app:layout_behavior="@string/appbar_scrolling_view_behavior" tools:showIn="@layout/activity_main" xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android"><ScrollView android:layout_width="match_parent" android:layout_height="wrap_content"><LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical"><ImageView android:layout_width="match_parent" android:layout_height="wrap_content" android:src="@drawable/company_logo" android:adjustViewBounds="true" android:contentDescription="@string/logo_description" /><RelativeLayout android:layout_width="match_parent" android:layout_height="@dimen/imei_height" android:background="@color/colorPrimary"><TextView android:text="@string/imei_title" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerVertical="true" android:layout_alignParentLeft="true" android:layout_marginLeft="@dimen/padding_container" android:textSize="@dimen/h2_text_size" android:textColor="@android:color/white" /><TextView android:id="@+id/textIMEI" android:text="@string/initial_value" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentRight="true" android:layout_centerVertical="true" android:layout_marginEnd="@dimen/padding_container" android:textColor="@android:color/white" android:textSize="@dimen/h2_text_size" /></RelativeLayout><RelativeLayout android:layout_width="match_parent" android:layout_height="@dimen/value_section"><TextView android:id="@+id/textCurrentSpeedTitle" android:text="@string/current_speed" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textColor="@color/content_orange" android:textSize="@dimen/h3_text_size" android:layout_centerInParent="true" android:layout_alignParentTop="true" android:layout_marginTop="@dimen/padding_container" /><TextView android:id="@+id/textCurrentSpeed" android:text="@string/initial_value" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerHorizontal="true" android:textColor="@color/colorAccent" android:textSize="@dimen/h6_text_size" android:layout_below="@id/textCurrentSpeedTitle" android:layout_marginTop="@dimen/padding_container_small" /></RelativeLayout><RelativeLayout android:layout_width="match_parent" android:layout_height="@dimen/separator_height" android:background="@color/colorPrimary" /><RelativeLayout android:layout_width="match_parent" android:layout_height="@dimen/value_section"><TextView android:id="@+id/textCurrentDistanceTitle" android:text="@string/current_distance" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textColor="@color/content_orange" android:textSize="@dimen/h3_text_size" android:layout_centerInParent="true" android:layout_alignParentTop="true" android:layout_marginTop="@dimen/padding_container" /><TextView android:id="@+id/textCurrentDistance" android:text="@string/initial_value" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerHorizontal="true" android:textColor="@color/colorAccent" android:textSize="@dimen/h6_text_size" android:layout_below="@id/textCurrentDistanceTitle" android:layout_marginTop="@dimen/padding_container_small" /></RelativeLayout><RelativeLayout android:layout_width="match_parent" android:layout_height="30dp" android:background="@color/colorPrimary" android:id="@+id/relativeLayout1"><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/coordinates" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_centerInParent="true" android:textSize="@dimen/h2_text_size" android:textColor="@android:color/white" /></RelativeLayout><RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/padding_container_small" android:layout_marginBottom="@dimen/padding_container_small" android:layout_marginStart="@dimen/padding_container" android:layout_marginEnd="@dimen/padding_container"><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/lattitude" android:textAppearance="?android:attr/textAppearanceMedium" android:id="@+id/textLatitudeTitle" android:textColor="@color/content_orange" android:textSize="@dimen/h3_text_size" /><TextView android:id="@+id/textLatitude" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/initial_value" android:textAppearance="?android:attr/textAppearanceMedium" android:textColor="@android:color/black" android:textSize="@dimen/h3_text_size" android:layout_alignParentRight="true" android:layout_marginTop="0dp" /><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/longitude" android:textAppearance="?android:attr/textAppearanceMedium" android:id="@+id/textLongitudeTitle" android:textColor="@color/content_orange" android:textSize="@dimen/h3_text_size" android:layout_marginTop="@dimen/padding_container_big" /><TextView android:id="@+id/textLongitude" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/initial_value" android:textAppearance="?android:attr/textAppearanceMedium" android:textColor="@android:color/black" android:textSize="@dimen/h3_text_size" android:layout_alignParentRight="true" android:layout_marginTop="@dimen/padding_container_big" /></RelativeLayout><RelativeLayout android:layout_width="match_parent" android:layout_height="30dp" android:background="@color/colorPrimary"><TextView android:text="@string/accelerometer" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/textAccelerometerTitle" android:layout_centerInParent="true" android:textSize="@dimen/h2_text_size" android:textColor="@android:color/white" /></RelativeLayout><RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/padding_container_small" android:layout_marginBottom="@dimen/padding_container_small" android:layout_marginStart="@dimen/padding_container" android:layout_marginEnd="@dimen/padding_container"><TextView android:text="@string/x" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textColor="@color/content_orange" android:textSize="@dimen/h3_text_size" /><TextView android:id="@+id/textAccelerometerX" android:text="@string/initial_value" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textColor="@android:color/black" android:textSize="@dimen/h3_text_size" android:layout_alignParentRight="true" android:layout_marginTop="@dimen/margin_top" /><TextView android:text="@string/y" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/padding_container_big" android:textColor="@color/content_orange" android:textSize="@dimen/h3_text_size" /><TextView android:id="@+id/textAccelerometerY" android:text="@string/initial_value" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textColor="@android:color/black" android:textSize="@dimen/h3_text_size" android:layout_alignParentRight="true" android:layout_marginTop="@dimen/padding_container_big" /><TextView android:text="@string/z" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/tabs_height" android:textColor="@color/content_orange" android:textSize="@dimen/h3_text_size" /><TextView android:id="@+id/textAccelerometerZ" android:text="@string/initial_value" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textColor="@android:color/black" android:textSize="@dimen/h3_text_size" android:layout_alignParentRight="true" android:layout_marginTop="@dimen/tabs_height" /></RelativeLayout><RelativeLayout android:layout_width="match_parent" android:layout_height="@dimen/imei_height" android:background="@color/colorPrimary"><TextView android:text="@string/altitude" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/textAltitudeTitle" android:layout_centerVertical="true" android:layout_alignParentLeft="true" android:layout_marginLeft="@dimen/padding_container" android:textSize="@dimen/h2_text_size" android:textColor="@android:color/white" /><TextView android:id="@+id/textAltitude" android:text="@string/initial_value" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentRight="true" android:layout_centerVertical="true" android:layout_marginRight="@dimen/padding_container" android:textColor="@android:color/white" android:textSize="@dimen/h3_text_size" /></RelativeLayout><RelativeLayout android:layout_width="match_parent" android:layout_height="@dimen/imei_height" android:background="@color/colorPrimary" android:layout_marginTop="@dimen/margin_vertical"><TextView android:text="@string/connection" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/textGPSTitle" android:layout_centerVertical="true" android:layout_alignParentLeft="true" android:layout_marginLeft="@dimen/padding_container" android:textSize="@dimen/h2_text_size" android:textColor="@android:color/white" /><TextView android:id="@+id/textConnection" android:text="@string/status" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentRight="true" android:layout_centerVertical="true" android:layout_marginRight="@dimen/padding_container" android:textColor="@android:color/white" android:textSize="@dimen/h3_text_size" /></RelativeLayout><Button android:id="@+id/buttonStart" android:gravity="center" android:background="@color/colorAccent" android:typeface="sans" android:textColor="@android:color/white" android:layout_width="match_parent" android:layout_height="50dp" android:textAllCaps="true" android:text="START TRACKING" android:layout_gravity="center" android:layout_marginTop="20dp" android:layout_marginBottom="20dp" /></LinearLayout></ScrollView></LinearLayout>